--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,23 @@
-name: Main Workflow
+name: VSBuild Main Workflow
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  run-tests:
-    uses: kirandevops1993/VS-TEST-REUSABLE/.github/workflows/VStest-reusable.yml@main
+  build:
+    uses: kirandevops1993/VS-BUILD-TASK-REUSABLE-/.github/workflows/vsbuildtask-reusable.yml@main
     with:
-      dotnet-version: "7.0.x"
-      test-assembly: "**/*Tests.dll" 
-      test-filter-criteria: "TestCategory=Unit"
-      run-settings-file: "test.runsettings"
-      code-coverage-enabled: true
+      logProjectEvents: true
+      vsVersion: "latest"
+      enableDefaultLogger: true
+      restoreNugetArgs: "-NoCache"
+      platform: "Any CPU"  
       configuration: "Release"
-      platform: "x64"
-      test-run-title: "Unit Tests"
-      custom-test-adapters: "path/to/custom/adapters"
-      run-in-parallel: true
+      maxCpu: 8
+      clean: true
+      vsbuildArguments: ""
+      createLogFile: true
+      logFileVerbosity: "detailed"
