--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       logProjectEvents: true
       vsVersion: "latest"
       enableDefaultLogger: true
-      restoreNugetArgs: "-NoHttpcache"
+      restoreNugetArgs: "-NoHttpCache"
       platform: "Any CPU"
       configuration: "Release"
       maxCpu: 8
@@ -22,4 +22,3 @@ jobs:
       vsbuildArguments: ""
       createLogFile: true
       logFileVerbosity: "detailed"
-
