--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    uses: kirandevops1993/VS-BUILD-TASK-REUSABLE-/.github/workflows/vsbuildtask-reusable.yml@main
+    uses: ./.github/workflows/vsbuildtask-reusable.yml
     with:
       runsOn: "windows-latest" 
       logProjectEvents: true
